Update club name from '奔跑者俱乐部' to '池州悦跑俱乐部'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>奔跑者俱乐部 - 跑步打卡社区</title>
+    <title>池州悦跑俱乐部 - 跑步打卡社区</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fas fa-running"></i>
-                <span>奔跑者俱乐部</span>
+                <span>池州悦跑俱乐部</span>
             </div>
             <div class="nav-menu">
                 <a href="#home" class="nav-link active">首页</a>
@@ -38,7 +38,7 @@
                 <div class="hero-content">
                     <h1>一起奔跑，成就更好的自己</h1>
                     <p>记录每一次奔跑，分享每一份快乐</p>
-                    <button class="btn-primary" onclick="showPage('打卡')">开始打卡</button>
+                    <button class="btn-primary" id="startCheckinBtn">开始打卡</button>
                 </div>
                 <div class="hero-stats">
                     <div class="stat-card">
@@ -171,4 +171,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
