--- a/index.html
+++ b/index.html
@@ -129,33 +129,39 @@
                 <h2><i class="fas fa-calendar-alt"></i> 跑团活动</h2>
             </div>
             <div class="events-container">
-                <div class="event-card">
-                    <div class="event-date">
-                        <span class="event-day">每周六</span>
-                        <span class="event-time">上午 7:00</span>
-                    </div>
-                    <div class="event-info">
-                        <h3>周末长距离拉练</h3>
-                        <p>📍 世纪公园集合</p>
-                        <p>👥 已有 15 人报名</p>
-                    </div>
-                    <button class="btn-secondary">我要报名</button>
-                </div>
-                <div class="event-card">
-                    <div class="event-date">
-                        <span class="event-day">每周三</span>
-                        <span class="event-time">晚上 19:30</span>
-                    </div>
-                    <div class="event-info">
-                        <h3>间歇跑训练</h3>
-                        <p>📍 体育场跑道</p>
-                        <p>👥 已有 8 人报名</p>
-                    </div>
-                    <button class="btn-secondary">我要报名</button>
-                </div>
+    <div class="event-card" data-event-id="event1">
+        <div class="event-date">
+            <span class="event-day">每周六</span>
+            <span class="event-time">上午 7:00</span>
+        </div>
+        <div class="event-info">
+            <h3>周末长距离拉练</h3>
+            <p>📍 世纪公园集合</p>
+            <p>周末长距离训练，适合各种配速的跑友</p>
+            <p>👥 0/20 人报名</p>
+            <div class="participants-list">
+                暂无报名
             </div>
-        </section>
-    </main>
+        </div>
+        <button class="btn-secondary">我要报名</button>
+    </div>
+    <div class="event-card" data-event-id="event2">
+        <div class="event-date">
+            <span class="event-day">每周三</span>
+            <span class="event-time">晚上 19:30</span>
+        </div>
+        <div class="event-info">
+            <h3>间歇跑训练</h3>
+            <p>📍 体育场跑道</p>
+            <p>提升速度和耐力的间歇训练</p>
+            <p>👥 0/15 人报名</p>
+            <div class="participants-list">
+                暂无报名
+            </div>
+        </div>
+        <button class="btn-secondary">我要报名</button>
+    </div>
+</div>
 
     <!-- 登录模态框 -->
     <div id="loginModal" class="modal">
@@ -173,3 +179,4 @@
 </body>
 
 </html>
+
