Update event location from Ping Tian Lake to Century Park

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="event-info">
                 <h3>周末长距离拉练</h3>
-                <p>📍 平天湖集合</p>
+                <p>📍 世纪公园集合</p>
                 <p>周末长距离训练，适合各种配速的跑友</p>
                 <p>👥 0/20 人报名</p>
                 <div class="participants-list">
